--- a/ageCalc.css
+++ b/ageCalc.css
@@ -7,7 +7,7 @@
 body {
   height: 100vh;
   background-image: linear-gradient(
-    to top,
+    to bottom,
     #fdcbf1 0%,
     #fdcbf1 1%,
     #e6dee9 100%
@@ -22,7 +22,7 @@ main {
   transform: translate(-50%, -50%);
   border-radius: 7px;
   border-radius: 7px;
-  background-image: linear-gradient(120deg, #a1c4fd 0%, #a7e0fa 100%);
+  background-image: linear-gradient(120deg, #a0c4fd 0%, #97d9f8 100%);
   width: 50%;
   text-align: center;
   margin: auto;
